# ai-demos

./: README.md
agentic-graph-rag/: README.md
agentic-graph-rag/agentic/: README.md  agenticGraphRAG.py  asknews-finance-graph.cypherl  classify_question.py  requirements.txt  setup.sh  state_machine_agent.py  test_community_precompute.py  test_config.py  test_schema.py
agentic-graph-rag/agentic/helpers/: test_community_precompute.py
agentic-graph-rag/agentic/jupiter/: agentic_graph_RAG.ipynb
agentic-graph-rag/impact-analysis/data/: generating.py  queries.md
agentic-graph-rag/vector/: README.md  requirements.txt  setup.sh
graph-rag/: graphRAG.ipynb
graph-rag/ted-talks/: graphRAG.ipynb
integrations/cognee/: cognee.ipynb
integrations/langgraph/memgraph-toolkit-chatbot/: README.md  langgraph.json  pyproject.toml
integrations/langgraph/synonym-agent/: agents.py  app.py  business_rules.yaml  requirements.txt  workflows.py
integrations/lightrag/: lightrag_memgraph_demo.ipynb
integrations/mcp/synonym-agent/: .gitignore  README.md  init.bash  pyproject.toml  server.py
knowledge-graph-creation/game-of-thrones/: game-of-thrones-kg.ipynb
knowledge-graph/langchain/: langchain.ipynb
retrieval/vector-search/: vector_search_example.ipynb
ted-talks/: docker-compose.yml
ted-talks/infobip2025/: graphRAG.ipynb
vector-search/chat-with-your-knowledge/: .gitignore  README copy.md  app.py  controller.py  embeddings.py  memgraph_storage.py  requirements.txt  storage.py  wikipedia_detailed_processor.py  wikipedia_processor.py
(+11 files in other folders)
